@@ -1,5 +1,8 @@
 2010-05-25  Miloslav Trmač  <mitr@redhat.com>
 
+	* src/client.py (ClientsConnection.__send_payload_from_file): Split
+	from ClientsConnection.send_payload_from_file.
+
 	* src/client.py (ClientsConnection.send_payload_from_file): Rename
 	parameter.
 
